# hbn_correction

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: docs.yaml  tests.yaml
examples/: run_data_correction.ipynb  run_data_correction.py
src/hbn_correction/: DiagnosticDataCleaning.py  datacorrection.py  main.py  utils.py
src/hbn_correction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: datacorrection_test.py  test_datacorrection.py
tests/test_data/: synth_data.csv
