[project]
name = "hbn_correction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ipykernel>=6.29.5",
  "mypy>=1.15.0",
  "pandas>=2.2.3",
  "pytest-cov>=6.1.1",
  "pytest>=8.3.5"
]

[dependency-groups]
dev = [
  "hbn_correction"
]

[tool.uv.sources]
hbn_correction = {workspace = true}
