[project]
name = "hbn_correction"
version = "0.1.0"
description = "Script to correct HBN clinician consesus diagnostic data"
authors = [{name = "maya-roberts", email = "maya36247@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29.5",
  "mypy>=1.15.0",
  "pandas-stubs>=2.3.2.250926",
  "pdoc>=15.0.4",
  "pytest-cov>=6.1.1",
  "pytest>=8.3.5",
  "ruff>=0.14.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"